# diffysynth

./: CMakeLists.txt  config.h.cmake
diffysynth/: diffysynth.sln  diffysynth.vcxproj
src/: cdsp.hpp  define.hpp  diff_eq.cpp  diff_eq.hpp  diff_eq_system.cpp  diff_eq_system.hpp  diffysynth.hpp  exception.cpp  exception.hpp  rng.cpp  rng.hpp  system.cpp  system.hpp  type.hpp  types.hpp  value.hpp  values.hpp
src/estimator/: estimator_base.hpp  runge_kutta_4.hpp
src/gp/: evaluator.cpp  evaluator.hpp  individual.cpp  individual.hpp  population.cpp  population.hpp  selector.cpp  selector.hpp
src/primitive/: constant.cpp  constant.hpp  elementary.cpp  elementary.hpp  estimate.cpp  estimate.hpp  parameter.cpp  parameter.hpp  primitive_base.cpp  primitive_base.hpp  square_root.cpp  square_root.hpp  time.cpp  time.hpp
src/stepper/: runge_kutta_4.cpp  runge_kutta_4.hpp  stepper_base.cpp  stepper_base.hpp
test/: test_rosetta.cpp  test_sin_cos.cpp
